--- a/module06/frontend/index.html
+++ b/module06/frontend/index.html
@@ -15,7 +15,64 @@
   </head>
   <body>
     <h1>My Todo</h1>
-    <div class="box"></div>
+    <!-- Button trigger modal -->
+    <div class="px-3">
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#addModal"
+      >
+        Add a new Todo
+      </button>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="addModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">New Todo</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="new-title" class="form-label"> Todo Title </label>
+              <input type="text" class="form-control" id="new-title" />
+            </div>
+            <div class="mb-3">
+              <label for="new-desc" class="form-label"> Description </label>
+              <textarea class="form-control" id="new-desc" rows="3"></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              id="add-close"
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button id="save-new-todo" type="button" class="btn btn-primary">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <table class="table">
       <thead>
         <tr>
