--- a/my_todo_app/frontend/index.html
+++ b/my_todo_app/frontend/index.html
@@ -72,6 +72,7 @@
               ></textarea>
               <div class="mt-3">
                 <button
+                  id="add-close"
                   type="button"
                   class="btn btn-secondary"
                   data-bs-dismiss="modal"
@@ -125,6 +126,7 @@
               ></textarea>
               <div class="mt-3">
                 <button
+                  id="edit-close"
                   type="button"
                   class="btn btn-secondary"
                   data-bs-dismiss="modal"
